gccida/c0/add_byte_size_attribute
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_byte_size_attribute/src/dwarf2out.c:9759:12: error: use of undeclared identifier 'v2'
tree_node *v2; // rax 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_byte_size_attribute/src/dwarf2out.c:9774:1: error: use of undeclared identifier 'v2'
v2 = field_type( tree_node); 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_byte_size_attribute/src/dwarf2out.c:9775:34: error: use of undeclared identifier 'v2'
size = simple_type_size_in_bits( v2) >> 3; 
                                 ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_byte_size_attribute/src/obj/dwarf2out.o] Error 1
